# sxml

./: .coveragerc  .flake8  .gitignore  .pylintrc  README.md  pyproject.toml  setup.cfg  tox.ini
examples/: pypi.html  pypi.out.yaml  pypi.yaml  python_releases.html  python_releases.out.yaml  python_releases.yaml  wiktionary.html  wiktionary.out.yaml  wiktionary.yaml  wordnet.html  wordnet.out.yaml  wordnet.yaml
sxml/: __init__.py  __main__.py  cli.py  html_dumper.py  operators.py  options.py  query.py  utils.py  yaml_helpers.py
sxml/html_dumper/: __init__.py  child_script.js  child_style.css  script.js  style.css
sxml/methods/: __init__.py  html.py
tests/: test_cli.py  test_methods_datetime.py  test_methods_html.py  test_methods_other.py  test_query.py  test_sxml_find.py
