[metadata]
name=sxml
version=0.1.4
license=MIT
description=Simple lxml pipeline
project_urls=
    Homepage=https://github.com/vmstarchenko/sxml
    Documentation=
long_description=file: README.rst
long_description_content_type=text/markdown
url=
keywords=lxml
platform = any
classifiers=
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: Implementation
    Programming Language :: Python :: Implementation :: IronPython
    Programming Language :: Python :: Implementation :: PyPy

[options]
setup_requires=setuptools>=42
install_requires=
    PyYAML
    lxml
    cssselect
    jsonpath-ng
    dateparser
    beautifulsoup4
    extruct
tests_require=tox
packages=sxml
zip_safe=true

[options.entry_points]
console_scripts =
    sxml = sxml.__main__:main

[coverage:run]
branch=True
include=sxml/*
omit=
    sxml/__main__.py
relative_files=True

[coverage:report]
show_missing=True

[flake8]
max_line_length=99
exclude=.asv,.eggs,.tox,.ipynb_checkpoints,build,dist,.git,__pycache__

[bdist_wheel]
universal=1

[check]
metadata=true
